--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎰 Casino Online | Juega y Gana</title>
+  <title>🎰 Circo Online</title>
   
   <!--
     CORRECCIÓN:
@@ -115,4 +115,5 @@
     });
   </script>
 </body>
+
 </html>
