--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   
   <h1 class="logo-text" id="logoContainer" style="visibility: visible;">
     <span class="logo-emoji">🎰</span>
-    <span class="logo-text-fill" id="casinoName" style="color: #00ff88; text-shadow: 0 0 20px rgba(0, 255, 136, 0.5);">CASINO ONLINE</span>
+    <span class="logo-text-fill" id="casinoName" style="color: #00ff88; text-shadow: 0 0 20px rgba(0, 255, 136, 0.5);">CIRCO ONLINE</span>
   </h1>
 
   <div class="card" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px);">
@@ -122,3 +122,4 @@
   </script>
 </body>
 </html>
+
