--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   
   <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
     <p id="minimoDeposito">Mínimo de carga: $1000</p>
-    <p>CIRCO EN VIVO - SLOTS - APUESTAS DEPORTIVAS</p>
+    <p>CIRCO EN VIVO - SLOTS - DEPORTIVAS</p>
   </div>
 
   <div class="metodos-pago" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
@@ -106,7 +106,7 @@
 
       if (whatsappButton) {
         whatsappButton.addEventListener('click', () => {
-          const waNumber = '5492236735328';
+          const waNumber = '5492236735372';
           const waMessage = encodeURIComponent('Hola, quiero más información');
           const whatsappUrl = `https://wa.me/${waNumber}?text=${waMessage}`;
           
@@ -122,4 +122,5 @@
   </script>
 </body>
 </html>
+
 
