--- a/admin.html
+++ b/admin.html
@@ -3,118 +3,136 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Panel de Ventas - Meta CAPI (Seguridad)</title>
+  <title>Registrar Compra (Meta CAPI)</title>
   <style>
     body {
-      font-family: "Inter", sans-serif;
-      background: #0b0b0b;
-      color: #e0e0e0;
+      font-family: system-ui, sans-serif;
+      background-color: #0e0e0e;
+      color: #ffffff;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
+      padding: 40px;
     }
-    #login, #panel {
-      background: #1a1a1a;
-      padding: 30px;
-      border-radius: 16px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.6);
-      width: 90%;
-      max-width: 400px;
+
+    h2 {
+      color: #4db8ff;
+      margin-bottom: 20px;
     }
-    input, button {
-      width: 100%;
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      background-color: #1c1c1c;
+      padding: 25px;
+      border-radius: 12px;
+      width: 320px;
+      box-shadow: 0 0 20px rgba(77, 184, 255, 0.2);
+    }
+
+    label {
+      font-size: 14px;
+      color: #ddd;
+    }
+
+    input {
       padding: 10px;
-      margin-top: 10px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      background-color: #2b2b2b;
+      color: white;
+    }
+
+    input:focus {
+      background-color: #333;
+    }
+
+    button {
+      margin-top: 15px;
+      padding: 12px;
+      background-color: #4db8ff;
+      color: #000;
       border: none;
       border-radius: 8px;
-      font-size: 1rem;
-    }
-    input { background: #2b2b2b; color: white; }
-    button {
-      background: #1877f2;
-      color: white;
       cursor: pointer;
+      font-weight: 600;
+      transition: 0.2s;
     }
-    button:hover { background: #0f5ccc; }
-    #result {
-      margin-top: 15px;
+
+    button:hover {
+      background-color: #80ccff;
+    }
+
+    pre {
+      background-color: #111;
+      padding: 15px;
+      border-radius: 10px;
+      color: #80ff80;
       white-space: pre-wrap;
-      background: #222;
-      padding: 10px;
-      border-radius: 8px;
-      color: #9cf59c;
-      max-height: 200px;
-      overflow-y: auto;
+      word-wrap: break-word;
+      margin-top: 20px;
+      width: 90%;
+      max-width: 600px;
     }
   </style>
 </head>
 <body>
+  <h2>Registrar Compra (Meta CAPI)</h2>
 
-  <!-- LOGIN -->
-  <div id="login">
-    <h2>Acceso restringido</h2>
-    <input type="password" id="password" placeholder="Contraseña de acceso" />
-    <button onclick="login()">Entrar</button>
-    <p id="loginError" style="color: red; display: none;">Contraseña incorrecta</p>
-  </div>
+  <form id="purchaseForm">
+    <label>Nombre del comprador:</label>
+    <input type="text" id="firstName" placeholder="Ej: Juan" required />
 
-  <!-- PANEL -->
-  <div id="panel" style="display:none;">
-    <h2>Registrar Compra (Meta CAPI)</h2>
-    <form id="purchaseForm">
-      <input type="text" id="phone" placeholder="Teléfono del comprador (ej: 1122334455)" />
-      <input type="email" id="email" placeholder="Email del comprador (opcional)" />
-      <input type="number" id="amount" placeholder="Monto en ARS (ej: 26000)" required />
-      <label for="date">Fecha y hora de compra:</label>
-      <input type="datetime-local" id="date" />
-      <button type="submit">Enviar compra a Meta</button>
-    </form>
-    <div id="result"></div>
-  </div>
+    <label>Apellido del comprador:</label>
+    <input type="text" id="lastName" placeholder="Ej: Pérez" required />
+
+    <label>Teléfono del comprador (sin + ni espacios):</label>
+    <input type="text" id="phone" placeholder="Ej: 1122334455" required />
+
+    <label>Email del comprador (opcional):</label>
+    <input type="email" id="email" placeholder="Ej: juan@email.com" />
+
+    <label>Monto en ARS:</label>
+    <input type="number" id="amount" placeholder="Ej: 26000" required />
+
+    <label>Fecha y hora de compra (opcional):</label>
+    <input type="datetime-local" id="event_time" />
+
+    <button type="submit">Enviar compra a Meta</button>
+  </form>
+
+  <pre id="response"></pre>
 
   <script>
-    // 🔐 Contraseña configurable
-    const ADMIN_PASSWORD = "45864722"; // ← Cambiala a la que vos quieras
-
-    function login() {
-      const input = document.getElementById("password").value;
-      if (input === ADMIN_PASSWORD) {
-        document.getElementById("login").style.display = "none";
-        document.getElementById("panel").style.display = "block";
-      } else {
-        document.getElementById("loginError").style.display = "block";
-      }
-    }
-
     const form = document.getElementById("purchaseForm");
+    const responseBox = document.getElementById("response");
+
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
-      const phone = document.getElementById("phone").value;
-      const email = document.getElementById("email").value;
-      const amount = document.getElementById("amount").value;
-      const event_time = document.getElementById("date").value;
+      responseBox.textContent = "⏳ Enviando compra a Meta...";
 
-      if (!amount || (!phone && !email)) {
-        alert("Debes ingresar al menos teléfono o email, y el monto en ARS.");
-        return;
-      }
+      const payload = {
+        firstName: document.getElementById("firstName").value,
+        lastName: document.getElementById("lastName").value,
+        phone: document.getElementById("phone").value,
+        email: document.getElementById("email").value,
+        amount: document.getElementById("amount").value,
+        event_time: document.getElementById("event_time").value || null
+      };
 
-      const res = await fetch("/api/meta-purchase", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ phone, email, amount, event_time }),
-      });
+      try {
+        const res = await fetch("/api/meta-purchase", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(payload),
+        });
 
-      const data = await res.json();
-      if (data.success && !data.metaResponse.error) {
-        document.getElementById("result").innerHTML =
-          "✅ Compra enviada correctamente a Meta\n\n" + JSON.stringify(data.metaResponse, null, 2);
-      } else {
-        document.getElementById("result").innerHTML =
-          "❌ Error al enviar\n\n" + JSON.stringify(data.metaResponse || data, null, 2);
+        const data = await res.json();
+        responseBox.textContent = "✅ Compra enviada correctamente a Meta\n\n" + JSON.stringify(data.metaResponse, null, 2);
+      } catch (err) {
+        responseBox.textContent = "❌ Error: " + err.message;
       }
     });
   </script>
