--- a/admin.html
+++ b/admin.html
@@ -75,7 +75,7 @@
     </div>
 
     <script>
-      const ADMIN_PASSWORD = "tu_contraseña_aqui"; // <- cámbiala antes de subir
+      const ADMIN_PASSWORD = "45864722"; // <- cámbiala antes de subir
 
       function login() {
         const input = document.getElementById("password").value.trim();
